application/brennoflavio/frp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frp
  namespace: frp
  labels:
    app: frp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frp
  template:
    metadata:
      labels:
        app: frp
    spec:
      containers:
      - name: frp
        image: ghcr.io/fatedier/frps:v0.61.1
        command: ["/usr/bin/frps", "-c", "/usr/bin/frps-config/frps.toml"]
        ports:
        - containerPort: 7000
        - containerPort: 8080
        - containerPort: 5353
        volumeMounts:
        - name: frp-config
          mountPath: /usr/bin/frps-config
          readOnly: true
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 64Mi
      volumes:
      - name: frp-config
        secret:
          secretName: frp-secret
